--- a/esthesis-edge-docs/web-archive/report.html
+++ b/esthesis-edge-docs/web-archive/report.html
@@ -18,7 +18,7 @@
     </ul>
     <h3 id="CDE006"><code>CDE006</code> — 'code-block' cannot be empty</h3>
     <ul id="CDE006-details">
-      <li id="CDE006-In-Container-engine-md-19-1">In Container-engine.md:19:1</li>
+      <li id="CDE006-In-Kubernetes-md-13-1">In Kubernetes.md:13:1</li>
     </ul>
     <h2 id="warnings">Warnings</h2>
     <ul style="list-style: none;">
@@ -27,7 +27,7 @@
     </ul>
     <h3 id="INT002"><code>INT002</code> — Map ID is not unique</h3>
     <ul id="INT002-details">
-      <li id="INT002---Enedis---in-esthesis-edge-tree-15-17---------esthesis-edge-tree-22-13">&quot;&quot;Enedis&quot;&quot; in esthesis-edge.tree:15:17 -&gt; &lt;br/&gt;    esthesis-edge.tree:22:13</li>
+      <li id="INT002---Enedis---in-esthesis-edge-tree-16-17---------esthesis-edge-tree-23-13">&quot;&quot;Enedis&quot;&quot; in esthesis-edge.tree:16:17 -&gt; &lt;br/&gt;    esthesis-edge.tree:23:13</li>
     </ul>
     <h3 id="VIS011"><code>VIS011</code> — Dark version of image or video file cannot be found</h3>
     <ul id="VIS011-details">
