--- a/esthesis-edge-docs/web-archive/report.html
+++ b/esthesis-edge-docs/web-archive/report.html
@@ -14,11 +14,11 @@
     </ul>
     <h2 id="errors">Errors</h2>
     <ul style="list-style: none;">
-      <li><a href="#CDE006"><code>CDE006</code> — 'code-block' cannot be empty</a></li>
+      <li><a href="#REF002"><code>REF002</code> — Referenced topic doesn't exist</a></li>
     </ul>
-    <h3 id="CDE006"><code>CDE006</code> — 'code-block' cannot be empty</h3>
-    <ul id="CDE006-details">
-      <li id="CDE006-In-Kubernetes-md-13-1">In Kubernetes.md:13:1</li>
+    <h3 id="REF002"><code>REF002</code> — Referenced topic doesn't exist</h3>
+    <ul id="REF002-details">
+      <li id="REF002---Main-md---in-Configuration-md-14-3">&quot;&quot;Main.md&quot;&quot; in Configuration.md:14:3</li>
     </ul>
     <h2 id="warnings">Warnings</h2>
     <ul style="list-style: none;">
@@ -27,7 +27,7 @@
     </ul>
     <h3 id="INT002"><code>INT002</code> — Map ID is not unique</h3>
     <ul id="INT002-details">
-      <li id="INT002---Enedis---in-esthesis-edge-tree-16-17---------esthesis-edge-tree-23-13">&quot;&quot;Enedis&quot;&quot; in esthesis-edge.tree:16:17 -&gt; &lt;br/&gt;    esthesis-edge.tree:23:13</li>
+      <li id="INT002---Enedis---in-esthesis-edge-tree-16-17---------esthesis-edge-tree-24-13">&quot;&quot;Enedis&quot;&quot; in esthesis-edge.tree:16:17 -&gt; &lt;br/&gt;    esthesis-edge.tree:24:13</li>
     </ul>
     <h3 id="VIS011"><code>VIS011</code> — Dark version of image or video file cannot be found</h3>
     <ul id="VIS011-details">
@@ -44,6 +44,7 @@
       <li id="CDE003"><code>CDE003</code> — The code snippet doesn't contain the line with the number specified in the 'collapsed-title-line-number' attribute</li>
       <li id="CDE004"><code>CDE004</code> — Cannot read the source code snippet from the specified location, falling back to the 'code-block' element content</li>
       <li id="CDE005"><code>CDE005</code> — Cannot read the source code snippet from the specified location, and there is no fallback content in the 'code-block' element</li>
+      <li id="CDE006"><code>CDE006</code> — 'code-block' cannot be empty</li>
       <li id="CDE007"><code>CDE007</code> — The 'include-lines' attribute on a 'code-block' element must represent a line number range like 1-3, or multiple comma-separated ranges like 1-3,5-7</li>
       <li id="CDE008"><code>CDE008</code> — The code snippet doesn't contain the lines specified in the 'include-lines' attribute of the corresponding 'code-block' element</li>
       <li id="CDE009"><code>CDE009</code> — Cannot use both the 'include-symbol' and the 'include-lines' attributes to reference a code snippet</li>
@@ -158,7 +159,6 @@
       <li id="PTY006"><code>PTY006</code> — Cannot process regular expression that cleans up a property value</li>
       <li id="PTY007"><code>PTY007</code> — Property content is corrupted</li>
       <li id="REF001"><code>REF001</code> — Cannot link to a topic that is not included in the current instance</li>
-      <li id="REF002"><code>REF002</code> — Referenced topic doesn't exist</li>
       <li id="REF003"><code>REF003</code> — Cannot include element with the specified ID because it does not exist</li>
       <li id="REF004"><code>REF004</code> — Link uses anchor that does not exist</li>
       <li id="REF005"><code>REF005</code> — Link inside topic points to the same topic without an anchor</li>
