--- a/esthesis-edge-docs/web-archive/report.html
+++ b/esthesis-edge-docs/web-archive/report.html
@@ -8,30 +8,19 @@
     <h1>Tests</h1>
     <p>175 tests total.</p>
     <ul>
-      <li><a href="#errors">1 errors</a></li>
-      <li><a href="#warnings">2 warnings</a></li>
-      <li><a href="#passed">172 passed</a></li>
+      <li><a href="#errors">0 errors</a></li>
+      <li><a href="#warnings">1 warnings</a></li>
+      <li><a href="#passed">174 passed</a></li>
     </ul>
     <h2 id="errors">Errors</h2>
-    <ul style="list-style: none;">
-      <li><a href="#REF002"><code>REF002</code> — Referenced topic doesn't exist</a></li>
-    </ul>
-    <h3 id="REF002"><code>REF002</code> — Referenced topic doesn't exist</h3>
-    <ul id="REF002-details">
-      <li id="REF002---Main-md---in-Configuration-md-14-3">&quot;&quot;Main.md&quot;&quot; in Configuration.md:14:3</li>
-    </ul>
     <h2 id="warnings">Warnings</h2>
     <ul style="list-style: none;">
-      <li><a href="#INT002"><code>INT002</code> — Map ID is not unique</a></li>
       <li><a href="#VIS011"><code>VIS011</code> — Dark version of image or video file cannot be found</a></li>
-    </ul>
-    <h3 id="INT002"><code>INT002</code> — Map ID is not unique</h3>
-    <ul id="INT002-details">
-      <li id="INT002---Enedis---in-esthesis-edge-tree-16-17---------esthesis-edge-tree-24-13">&quot;&quot;Enedis&quot;&quot; in esthesis-edge.tree:16:17 -&gt; &lt;br/&gt;    esthesis-edge.tree:24:13</li>
     </ul>
     <h3 id="VIS011"><code>VIS011</code> — Dark version of image or video file cannot be found</h3>
     <ul id="VIS011-details">
       <li id="VIS011------images-big-logo_dark-png---in-Introduction-md-3-1">&quot;&quot;../images/big-logo_dark.png&quot;&quot; in Introduction.md:3:1</li>
+      <li id="VIS011---enedis-welcome-page_dark-png---in-enedis-md-23-1">&quot;&quot;enedis-welcome-page_dark.png&quot;&quot; in enedis.md:23:1</li>
     </ul>
     <h2 id="passed">Passed</h2>
     <ul>
@@ -88,6 +77,7 @@
       <li id="CTT004"><code>CTT004</code> — Undefined variable</li>
       <li id="CTT005"><code>CTT005</code> — Variable depends on itself</li>
       <li id="INT001"><code>INT001</code> — Error description template is not found</li>
+      <li id="INT002"><code>INT002</code> — Map ID is not unique</li>
       <li id="INT004"><code>INT004</code> — Unexpected article rendering error:</li>
       <li id="INT007"><code>INT007</code> — XML serialization error</li>
       <li id="INT008"><code>INT008</code> — Unexpected HTML rendering error: cannot produce a PDF</li>
@@ -159,6 +149,7 @@
       <li id="PTY006"><code>PTY006</code> — Cannot process regular expression that cleans up a property value</li>
       <li id="PTY007"><code>PTY007</code> — Property content is corrupted</li>
       <li id="REF001"><code>REF001</code> — Cannot link to a topic that is not included in the current instance</li>
+      <li id="REF002"><code>REF002</code> — Referenced topic doesn't exist</li>
       <li id="REF003"><code>REF003</code> — Cannot include element with the specified ID because it does not exist</li>
       <li id="REF004"><code>REF004</code> — Link uses anchor that does not exist</li>
       <li id="REF005"><code>REF005</code> — Link inside topic points to the same topic without an anchor</li>
