--- a/esthesis-edge-docs/web-archive/report.html
+++ b/esthesis-edge-docs/web-archive/report.html
@@ -8,11 +8,18 @@
     <h1>Tests</h1>
     <p>175 tests total.</p>
     <ul>
-      <li><a href="#errors">0 errors</a></li>
+      <li><a href="#errors">1 errors</a></li>
       <li><a href="#warnings">1 warnings</a></li>
-      <li><a href="#passed">174 passed</a></li>
+      <li><a href="#passed">173 passed</a></li>
     </ul>
     <h2 id="errors">Errors</h2>
+    <ul style="list-style: none;">
+      <li><a href="#REF001"><code>REF001</code> — Cannot link to a topic that is not included in the current instance</a></li>
+    </ul>
+    <h3 id="REF001"><code>REF001</code> — Cannot link to a topic that is not included in the current instance</h3>
+    <ul id="REF001-details">
+      <li id="REF001---FroniusConfiguration-md---in-Fronius-md-14-86---------ModulesConfiguration-md-6-3">&quot;&quot;FroniusConfiguration.md&quot;&quot; in Fronius.md:14:86 -&gt; &lt;br/&gt;    ModulesConfiguration.md:6:3</li>
+    </ul>
     <h2 id="warnings">Warnings</h2>
     <ul style="list-style: none;">
       <li><a href="#VIS011"><code>VIS011</code> — Dark version of image or video file cannot be found</a></li>
@@ -20,6 +27,7 @@
     <h3 id="VIS011"><code>VIS011</code> — Dark version of image or video file cannot be found</h3>
     <ul id="VIS011-details">
       <li id="VIS011------images-big-logo_dark-png---in-Introduction-md-3-1">&quot;&quot;../images/big-logo_dark.png&quot;&quot; in Introduction.md:3:1</li>
+      <li id="VIS011---deddie-self-registration-page_dark-png---in-Deddie-md-27-1">&quot;&quot;deddie-self-registration-page_dark.png&quot;&quot; in Deddie.md:27:1</li>
       <li id="VIS011---enedis-welcome-page_dark-png---in-enedis-md-23-1">&quot;&quot;enedis-welcome-page_dark.png&quot;&quot; in enedis.md:23:1</li>
     </ul>
     <h2 id="passed">Passed</h2>
@@ -148,7 +156,6 @@
       <li id="PTY005"><code>PTY005</code> — The specified property bundle is not available for the current product</li>
       <li id="PTY006"><code>PTY006</code> — Cannot process regular expression that cleans up a property value</li>
       <li id="PTY007"><code>PTY007</code> — Property content is corrupted</li>
-      <li id="REF001"><code>REF001</code> — Cannot link to a topic that is not included in the current instance</li>
       <li id="REF002"><code>REF002</code> — Referenced topic doesn't exist</li>
       <li id="REF003"><code>REF003</code> — Cannot include element with the specified ID because it does not exist</li>
       <li id="REF004"><code>REF004</code> — Link uses anchor that does not exist</li>
